# TransmissionMediaManager

./: LICENSE  README.md  pyproject.toml
transmission_media_manager/: main.py  settings.py  torrent.py
